--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         
         header {
-            background: linear-gradient(135deg, #FDD985 0%, #E99F46 100%);
+            background: radial-gradient(circle at center -100px, #FDD985, #E99F46);
             padding: 20px;
             text-align: center;
             border-bottom: 3px solid #000000;
