--- a/index.html
+++ b/index.html
@@ -274,14 +274,14 @@
             margin-top: 10px;
         }
         
-        footer {
+                footer {
             text-align: center;
             padding: 20px;
             background: rgba(25, 25, 35, 0.9);
             margin-top: 20px;
             font-size: 14px;
-            color: #95a5a6;
-            border-top: 1px solid #34495e;
+            background: radial-gradient(circle at center 400px, #FDD985, #E99F46);
+            border-top: 1px solid #000000;
         }
         
         @keyframes fadeIn {
