--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             background: rgba(25, 25, 35, 0.9);
             margin-top: 20px;
             font-size: 14px;
-            background: radial-gradient(circle at center 400px, #FDD985, #E99F46);
+            background: radial-gradient(circle at center 400px, #E99F46);
             border-top: 1px solid #000000;
         }
         
