--- a/index.html
+++ b/index.html
@@ -269,12 +269,16 @@
         
         .page-counter {
             text-align: center;
-            color: #bdc3c7;
+            background: linear-gradient(135deg, #FDD985 0%, #E99F46 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
             font-size: 16px;
             margin-top: 10px;
         }
         
-                footer {
+        footer {
             text-align: center;
             padding: 20px;
             background: rgba(25, 25, 35, 0.9);
